<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
    
    <!-- 如果 -->
    <TextView 
        android:id="@+id/tv_if"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_if"
        android:textSize="30sp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        />
    
    <!-- 习惯名字 -->
    <TextView 
        android:id="@+id/tv_habitName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_habitName"
        android:textSize="20sp"
        android:layout_below="@id/tv_if"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        />
    
    <!-- 那么 -->
    <TextView 
        android:id="@+id/tv_then"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_then"
        android:textSize="30sp"
        android:layout_below="@id/tv_habitName"
        android:layout_alignLeft="@id/tv_if"
        android:layout_marginTop="10dp"
        />
    
    <!-- 惩罚内容 -->
    <TextView 
        android:id="@+id/tv_punish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_punish"
        android:textSize="20sp"
        android:layout_below="@id/tv_then"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        />
    
    <!-- @的名单 -->
    <TextView 
        android:id="@+id/tv_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_follower"
        android:textSize="20sp"
        android:layout_below="@id/tv_punish"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@id/tv_then"
        />
    
</RelativeLayout>