<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:paddingBottom="5dp"
    >
    
    <!-- 习惯详细内容的文字部分 -->
    <TextView 
        android:id="@+id/tv_habitWords"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/debugWords"
        android:textSize="18sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        />
    
    <!-- 习惯详细内容的图片部分 -->
    <ImageView 
        android:id="@+id/iv_habitPic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/habitPic"
        android:layout_below="@id/tv_habitWords"
        android:layout_marginTop="5dp"
        android:layout_alignLeft="@id/tv_habitWords"
        />
    
    <!-- 习惯详细内容的日期、时间 -->
    <TextView 
        android:id="@+id/tv_timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/debugTimestamp"
        android:textSize="15sp"
        android:layout_below="@id/iv_habitPic"
        android:layout_marginTop="5dp"
        android:layout_alignLeft="@id/iv_habitPic"
        />
    
</RelativeLayout>